--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1057,3 +1057,15 @@ textarea{
 .themed_bg {
     background-color: #B00;
 }
+#modal-box {
+  background: none repeat scroll 0 0 #fff;
+  border: 1px solid #ccc;
+  display: none;
+  height: 60%;
+  padding: 5px;
+  width: 700px;
+}
+.iw-modalOverlay{
+  background-color: windowtext;
+  opacity: 0.77;
+}
