--- a/app/views/finance/master_fees.html.haml
+++ b/app/views/finance/master_fees.html.haml
@@ -24,33 +24,33 @@
     = back_button
 #page-yield
   #flash_box
-  - unless flash[:notice].nil?
+  - unless flash[:notice].blank?
     %p.flash-msg
       = flash[:notice]
   .bread_crumb
-    = link_to t('finance_text'), :controller => "finance", :action=>"index"
+    = link_to t('finance_text'), finance_index_path
     »
-    \#{link_to "#{t('fees_text')}", :controller => "finance", :action => "fees_index"} »
-    \#{link_to "#{t('create_fees')}", :controller => "finance", :action => "fees_create"} »
+    \#{link_to t('fees_text'), controller: :finance, action: :fees_index} »
+    \#{link_to t('create_fees'), controller: :finance, action: :fees_create} »
     \#{t('master_fees')}
   #message
   .box
     .fee-link
       .link-box
         .link-heading
-          = link_to_remote "#{t('create_category')}", :url => { :action => 'master_category_new'}
+          = link_to t('create_category'), { action: :master_category_new}, remote: true
         .link-descr
           = t('create_master_category')
       .link-box
         .link-heading
-          = link_to "#{t('create_particulars')}", :action => 'fees_particulars_new'
+          = link_to t('create_particulars'), action: :fees_particulars_new
         .link-descr
           = t('create_particulars')
       .link-box
         .link-heading
-          = link_to "#{t('create_discount')}",:action => 'fee_discounts'
+          = link_to t('create_discount'), action: :fee_discounts
         .link-descr= t('create_fee_discounts')
-    #modal-box{:style => "display:none;"}
+    #modal-box{ style: "display:none;"}
     = @a
     #batch
       .label-field-pair
@@ -58,9 +58,7 @@
           = t('select_a_batch')
           \:
         .text-input-bg
-          = select("id",:id,@batchs.map { |c| [c.full_name, c.id] },                                                         |
-            {:prompt => "#{t('select_a_batch')}"},                                                                           |
-            {:onChange => "#{remote_function(:url => {:action => "show_master_categories_list"}, :with => "'id='+value")}"}) |
+          = select("id",:id,@batchs.map { |c| [c.full_name, c.id] }, { prompt: t('select_a_batch')}, { onChange: "onChangeRequest(this, '#{url_for(action: :show_master_categories_list, id: 'paramid')}')"})
     #fee_collection_dates
     #categories
-      = render :partial => "master_category_list" unless params[:batch_id].blank?
+      = render "master_category_list" unless params[:batch_id].blank?
