--- a/app/views/attendance_reports/_mode.html.haml
+++ b/app/views/attendance_reports/_mode.html.haml
@@ -21,11 +21,4 @@
     = t('select_mode')
     \:
   .text-input-bg
-    = select :mode, :id,                                                             |
-      [["#{t('monthly')}","Monthly"], ["#{t('overall')}","Overall"]],                |
-      {:prompt => "#{t('select_mode')}"},                                            |
-      {:onchange => "#{remote_function(                                              |
-      :url => { :action => 'show' },                                                 |
-      :with => "'mode='+value+'&batch_id='+#{@batch.id}+'&subject_id='+#{@subject}", |
-      :before => "Element.show('loader')",                                           |
-      :success => "Element.hide('loader')"  )}"}                                     |
+    = select :mode, :id, [[t('monthly'),"Monthly"], [t('overall'),"Overall"]], { prompt: t('select_mode')}, { onchange: "onChangeRequest(this, '#{url_for(action: :show, mode: 'paramid', batch_id: @batch.id, subject_id: @subject)}')"}
