--- a/app/views/attendance_reports/_subject.html.haml
+++ b/app/views/attendance_reports/_subject.html.haml
@@ -20,19 +20,11 @@
   %label
     = t('select_a_subject')
   .text-input-bg
-    - text = "#{t('select_a_subject')}"
     - dropdown_list = []
-    - if @current_user.employee? and @allow_access==true
+    - if @current_user.employee? and @allow_access == true
       - dropdown_list = @subjects.map {|b| [b.name, b.id] }
     - else
-      - dropdown_list << ["#{t('all_subjects')}", "all_sub"]
+      - dropdown_list << [t('all_subjects'), "all_sub"]
       - dropdown_list +=  @subjects.map {|b| [b.name, b.id] }
-    = select :subject, :id,                                     |
-      dropdown_list,                                            |
-      {:prompt => text},                                        |
-      {:onchange => "#{remote_function(                         |
-      :url => { :action => 'mode' },                            |
-      :with => "'subject_id='+value+'&batch_id='+#{@batch.id}", |
-      :before => "Element.show('loader')",                      |
-      :success => "Element.hide('loader')"  )}"}                |
+    = select :subject, :id, dropdown_list, { prompt: t('select_a_subject') }, { onchange: "onChangeRequest(this, '#{url_for(action: :mode, subject_id: 'paramid', batch_id: @batch_id)}')"}
 #register
