--- a/app/views/attendance_reports/_year.html.haml
+++ b/app/views/attendance_reports/_year.html.haml
@@ -17,11 +17,4 @@
 - #specific language governing permissions and limitations
 - #under the License.
 .text-input-bg3
-  = select :year, :id,                                                                                 |
-    [["#{t('year')}",""],[@year-1,@year-1],[@year,@year], [@year+1,@year+1]],                          |
-    {:prompt => "#{t('year')}"},                                                                       |
-    {:onchange => "#{remote_function(                                                                  |
-    :url => { :action => 'report' },                                                                   |
-    :with => "'year='+value+'&batch_id='+#{@batch.id}+'&month='+#{@month}+'&subject_id='+#{@subject}", |
-    :before => "Element.show('loader')",                                                               |
-    :success => "Element.hide('loader')"  )}"}                                                         |
+  = select :year, :id, [[t('year'),""],[@year-1,@year-1],[@year,@year], [@year+1,@year+1]], { prompt: t('year')}, { onchange: "onChangeRequest(this, '#{url_for(action: :report, year: 'paramid', batch_id: @batch.id, month: @month, subject_id: @subject)}')"}
