--- a/app/views/calendar/_month.haml
+++ b/app/views/calendar/_month.haml
@@ -19,43 +19,34 @@
 #calendar-legend
   #legend-entry
     #legend-symbol
-      .legend-icon{:style => "background:#000000;"}
+      .legend-icon{ style: "background:#000000;"}
     #legend-text= t('events')
   #legend-entry
     #legend-symbol
-      .legend-icon{:style => "background:#0C6C92;"}
+      .legend-icon{ style: "background:#0C6C92;"}
     #legend-text= t('examinations')
   #legend-entry
     #legend-symbol
-      .legend-icon{:style => "background:#00b400;"}
+      .legend-icon{ style: "background:#00b400;"}
     #legend-text= t('holidays')
   #legend-entry
     #legend-symbol
-      .legend-icon{:style => "background:#b40000;"}
+      .legend-icon{ style: "background:#b40000;"}
     #legend-text= t('dues')
 %br/
 #head-month
   .header
     .prev
-      = link_to_remote "◄",                                                            |
-        :before => "Element.show('loader')",                                           |
-        :success => "Element.hide('loader')",                                          |
-        :url=>{:controller=>"calendar", :action=>"new_calendar"},                      |
-        :with   => "'new_month=#{@show_month.month-1}'+ '&passed_date=#{@show_month}'" |
+      = link_to_remote "◄", url_for(controller: :calendar, action: :new_calendar, new_month: (@show_month.month - 1), passed_date: @show_month), remote: true
     .month
-      = I18n.l(@show_month,:format=>:month_year)
+      = I18n.l(@show_month, format: :month_year)
     .next
-      = link_to_remote "►",                                                            |
-        :before => "Element.show('loader')",                                           |
-        :success => "Element.hide('loader')",                                          |
-        :url=>{:controller=>"calendar", :action=>"new_calendar"},                      |
-        :with   => "'new_month=#{@show_month.month+1}'+ '&passed_date=#{@show_month}'" |
+      = link_to_remote "►", url_for(controller: :calendar, action: :new_calendar, new_month: (@show_month.month+1), passed_date: @show_month ), remote: true
     .extender
-%table#calendar-table{:align => "center", :width => "100%"}
+%table#calendar-table{align: "center", width: "100%"}
   %tbody
     %tr.week
-      - @days_of_week= ["#{t('sunday')}","#{t('monday')}","#{t('tuesday')}","#{t('wednesday')}","#{t('thursday')}","#{t('friday')}","#{t('saturday')}"]
-      - @days_of_week.each do |d|
+      - [t('sunday'),t('monday'),t('tuesday'),t('wednesday'),t('thursday'),t('friday'),t('saturday')].each do |d|
         %td
           %span= d
     %tr.blank
@@ -63,19 +54,17 @@
       %tr.day
         - (1..7).each do |c|
           - dt = c - @start_date_day + (r-1)*7
-          - day_style = (dt==@show_month.day && @local_tzone_time.to_date==@show_month)? "today" : nil
-          %td{:class => "#{day_style.to_s}"}
+          - day_style = (dt == @show_month.day && @local_tzone_time.to_date == @show_month)? "today" : nil
+          %td{ class: day_style.to_s}
             - unless (r == 1 and c <= @start_date_day)
               - unless dt > @last_day.day
-                - if permitted_to? :index,:event
+                - if permitted_to? :index, :event
                   .link
-                    = link_to "#{t('add')}", :controller=>"event",:action=>"index",:id=>Date.parse("#{@show_month.year}-#{@show_month.month}-#{dt}")
+                    = link_to t('add'), url_for(controller: :event, action: :index, id: Date.parse("#{@show_month.year}-#{@show_month.month}-#{dt}"))
                     %span= dt
                   .link-group
                     - if @events.include?("#{@show_month.year}-#{@show_month.month}-#{dt}".to_date)
-                      = link_to_remote("<div class='calendar-legend' style='background:#000000;'></div>", {:url => {:action => "#"}}, {:onmouseover =>remote_function(                                             |
-                          :url => { :action => :show_event_tooltip, :id=>Date.parse("#{@show_month.year}-#{@show_month.month}-#{dt}") },:before => "Element.show('loader')",:success => "Element.hide('loader')"), |
-                        :class=>"event"})                                                                                                                                                                          |
+                      = link_to_remote("<div class='calendar-legend' style='background:#000000;'></div>", { url: 'javascrpt:void(0);'}, { onmouseover: "ajaxRequest('#{url_for(action: :show_event_tooltip, id: Date.parse('#{@show_month.year}-#{@show_month.month}-#{dt}'))}')"})                                                                                                                                                                          |
                     - if @holiday_event.include?("#{@show_month.year}-#{@show_month.month}-#{dt}".to_date)
                       = link_to_remote("<div class='calendar-legend' style='background:#00b400;'></div>", {:url => {:action => "#"}}, {:onmouseover =>remote_function(                                                     |
                           :url => { :action => :show_holiday_event_tooltip, :id=>Date.parse("#{@show_month.year}-#{@show_month.month}-#{dt}") },:before => "Element.show('loader')",:success => "Element.hide('loader')"), |
