--- a/app/views/cce_weightages/assign_weightages.html.haml
+++ b/app/views/cce_weightages/assign_weightages.html.haml
@@ -31,19 +31,9 @@
       %p.flash-msg
         = flash[:notice]
   .label-field-pair
-    %label{:for => "course_id"}= t('select_a_course')
-    = image_tag("loader.gif",     |
-      :align => "absmiddle",      |
-      :border => 0,               |
-      :id => "loader",            |
-      :style =>"display: none;" ) |
+    %label{for: "course_id"}
+      = t('select_a_course')
+    = image_tag("loader.gif", align: :absmiddle, border: 0, id: :loader, style: "display: none;" )
     .text-input-bg
-      = select :course, :course_id,                                                |
-        @courses.map {|b| [b.full_name, b.id]},                                    |
-        {:prompt => "#{t('select_a_course')}"},                                    |
-        {:onChange => "#{remote_function(:url => {:action => "select_weightages"}, |
-        :with => "'course_id='+ value",                                            |
-        :before => "Element.show('loader')",                                       |
-        :success => "Element.hide('loader')"                                       |
-        )}"}                                                                       |
+      = select :course, :course_id, @courses.map {|b| [b.full_name, b.id]}, { prompt: t('select_a_course')}, { onChange:"onChangeRequest(this, '#{url_for(action: :select_weightages, course_id: 'paramid')}')"}
   #select_weightages
