--- a/app/views/class_designations/index.html.haml
+++ b/app/views/class_designations/index.html.haml
@@ -29,9 +29,7 @@
         = t('select_a_course')
         \:
       .text-input-bg
-        = select :class_designation, :course_id,                                                                                                       |
-          Course.active.map {|b| [b.full_name, b.id]},                                                                                                 |
-          {prompt: t('select_a_course')}, { onChange: "#{remote_function( url: load_class_designations_class_designations_path(course_id: "value"))}"} |
+        = select :class_designation, :course_id, Course.active.map {|b| [b.full_name, b.id]}, { prompt: t('select_a_course')}, { onChange: "onChangeRequest(this, '#{load_class_designations_class_designations_path(course_id: 'paramid')}')"}
   #flash
   #errors
     = error_messages_for 'class_designation'
