--- a/app/views/class_timings/index.html.haml
+++ b/app/views/class_timings/index.html.haml
@@ -32,18 +32,10 @@
       = t('select_a_batch')
       \:
     .text-input-bg
-      = select :batch, :id,                      |
-        @batches.map {|b| [b.full_name, b.id] }, |
-        {:prompt => "#{t('common')}"},           |
-        {:onchange => "#{remote_function(        |
-        :url => { :action => 'show' },           |
-        :with => "'batch_id='+value",            |
-        :before => "Element.show('loader')",     |
-        :success => "Element.hide('loader')"     |
-        )}"}                                     |
-      = image_tag("loader.gif", :align => "absmiddle", :border => 0, :id => "loader", :style =>"display: none;" )
-  #class-timings-list= render :partial => "show_batch_timing"
-  #modal-box{:style => "display:none;"}
+      = select :batch, :id, @batches.map {|b| [b.full_name, b.id] }, { prompt: t('common')}, { onchange: "onChangeRequest(this, '#{url_for(action: :show, batch_id: 'paramid')}')" }
+      = image_tag("loader.gif", align: :absmiddle, border: 0, id: :loader, style: "display: none;" )
+  #class-timings-list= render "show_batch_timing"
+  #modal-box{style: "display:none;"}
   .extender
  
  
