--- a/app/views/courses/manage_batches.html.haml
+++ b/app/views/courses/manage_batches.html.haml
@@ -19,37 +19,30 @@
 #content-header
   = image_tag("show_settings.png")
   %h1= t('course_text')
-  %h3= "#{t('manage_batch')}"
+  %h3= t('manage_batch')
   #app-back-button
     = back_button
 #inner-tab-menu
   %ul
     - if permitted_to? :index ,:grading_levels
-      %li= link_to "#{t('grading_system')}", grading_levels_path
-    %li= link_to "#{t('batch_transfer')}", :controller => 'batch_transfers'
+      %li= link_to t('grading_system'), grading_levels_path
+    %li= link_to t('batch_transfer'), controller: :batch_transfers
 #page-yield
   .bread_crumb
-    = link_to t('configuration_text'), :controller => "configuration", :action=>"index"
+    = link_to t('configuration_text'), controller: :configuration, action: :index
     »
-    \#{link_to "#{t('courses_text')}", :controller => "courses", :action => "index"} »
+    \#{link_to t('courses_text'), controller: :courses, action: :index} »
     \#{t('manage_batch')}
   - unless flash[:notice].nil?
     %p.flash-msg
       = flash[:notice]
   .box
     .label-field-pair
-      %label{:for => "student_course"}
-        = "#{t('select_a_course')}"
+      %label{for: "student_course"}
+        = t('select_a_course')
         \:
-        \#{image_tag("loader.gif",:align => "absmiddle",:border => 0,:id => "loader", :style =>"display: none;" )}
+        \#{image_tag("loader.gif", align: :absmiddle, border: 0, id: :loader, style: "display: none;" )}
       .text-input-bg
-        = select :course, :name,                                                |
-          Course.active.map {|b| [b.course_name + " " + b.section_name, b.id]}, |
-          {:prompt => "#{t('select_a_course')}"},                               |
-          {:onChange => "#{remote_function(:url => {:action => "update_batch"}, |
-          :with => "'course_name='+ value",                                     |
-          :before => "Element.show('loader')",                                  |
-          :success => "Element.hide('loader')"                                  |
-          )}"}                                                                  |
+        = select :course, :name, Course.active.map {|b| ["#{b.course_name} #{b.section_name}", b.id]},{ prompt: t('select_a_course')}, { onChange: "onChangeRequest(this, '#{url_for(action: :update_batch, course_name: 'paramid')}')"}
     #update_batch
     .extender
