--- a/app/views/employee/_all_employee_leave_applications.haml
+++ b/app/views/employee/_all_employee_leave_applications.haml
@@ -17,11 +17,10 @@
 - #specific language governing permissions and limitations
 - #under the License.
 .label-field-pair
-  %label{:for => "leave_type"}= t('select_department')
-  .text-input-bg= select :leave_management_all, :department_id, @departments.map { |s| [s.name, s.id] }, |
-      {:prompt => "#{t('select_department')}"},                                              |
-      {:onChange => "#{remote_function(:url => {:action => "update_employees_select"},       |
-      :with => "'department_id='+value+ '&emp_id=#{@employee.id}'")}"}                       |
+  %label{ for: "leave_type"}
+    = t('select_department')
+  .text-input-bg
+    = select :leave_management_all, :department_id, @departments.map { |s| [s.name, s.id] }, {prompt: t('select_department')}, { onChange: "onChangeRequest(this, '#{url_for(action: :update_employees_select, department_id: 'paramid', emp_id: @employee.id)}')"
 #employees_select
-  = render :partial => 'employee_select'
+  = render 'employee_select'
 .extender
