--- a/app/views/employee/_employee_select.haml
+++ b/app/views/employee/_employee_select.haml
@@ -17,10 +17,9 @@
 - #specific language governing permissions and limitations
 - #under the License.
 .label-field-pair
-  %label{:for => "leave_type"}= t('select_employee')
+  %label{ for: "leave_type"}
+    = t('select_employee')
   .text-input-bg
-    = select :leave_management_all, :employee_id, @employees.map { |s| [s.first_name, s.id] },                                         |
-      {:prompt => "#{t('select_employee')}"},                                                                                          |
-      {:onChange => "#{remote_function(:url => {:action => "leave_list"}, :with => "'employee_id='+value + '&emp_id=#{@employee}'")}"} |
+    = select :leave_management_all, :employee_id, @employees.map { |s| [s.first_name, s.id] }, { prompt: t('select_employee')}, { onChange: "onChangeRequest(this, '#{url_for(action: :leave_list, employee_id: 'paramid', emp_id: @employee)}')"}
 .extender
 #leave-list
