--- a/app/views/finance/fee_discount_new.haml
+++ b/app/views/finance/fee_discount_new.haml
@@ -34,8 +34,8 @@
     = link_to t('finance_text'), controller: :finance, action: :index
     »
     \#{link_to t('fees_text'), controller: :finance, action: :fees_index} »
-    \#{link_to "#{t('create_fees'), controller: :finance, action: :fees_create} »
-    \#{link_to "#{t('master_fees'), controller: :finance, action: :master_fees} »
+    \#{link_to t('create_fees'), controller: :finance, action: :fees_create} »
+    \#{link_to t('master_fees'), controller: :finance, action: :master_fees} »
     \#{t('create_discount')}
   #form-errors
   #batch
