--- a/app/views/finance/_category_wise_discount_form.haml
+++ b/app/views/finance/_category_wise_discount_form.haml
@@ -16,37 +16,40 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
-- form_remote_for :fee_discount, :url=>{:action=>"category_wise_fee_discount_create"} do |form|
+= form_for :fee_discount, url: { action: :category_wise_fee_discount_create}, remote: true do |form|
   .label-field-pair
-    %label{:for => "reason"}= t('name')
-    .text-input-bg= form.text_field :name
+    %label{ for: :reason}
+      = t('name')
+    .text-input-bg
+      = form.text_field :name
   .label-field-pair
     %label
       = t('fee_category')
       \:
     .text-input-bg
-      = select("","", @fee_categories.map { |item| [item.name, item.name] },                                             |
-        {:prompt => "#{t('select_category')}" },                                                                         |
-        {:onchange => "#{remote_function(:url => {:action => "fee_collection_batch_update"}, :with => "'id='+value")}"}) |
+      = select("","", @fee_categories.map { |item| [item.name, item.name] }, { prompt: t('select_category') }, { onchange: "onchangeRequest(this, '#{url_for(action: :fee_collection_batch_update, id: 'paramid')}')"})
   #batchs
   .label-field-pair
     %label{:for => "reason"}
       = t('select_student_category')
       \:
     .text-input-bg
-      = form.select(:receiver_id, @student_categories.map { |item| [item.name, item.id] },{:prompt=>"#{t('select_student_category')}"})
+      = form.select(:receiver_id, @student_categories.map { |item| [item.name, item.id] },{ prompt: t('select_student_category')})
   .label-field-pair
-    %label{:for => "reason"}
+    %label{ for: :reason}
       = t('discount')
       (%)
-    .text-input-bg= form.text_field :discount
+    .text-input-bg
+      = form.text_field :discount
   .label_field_pair
-    %label.label_for_student_gender{:for => "is_amount"}= t('discount_type')
+    %label.label_for_student_gender{ for: :is_amount}
+      = t('discount_type')
     .student_gender_value
-      %label.label_for_gender{:for => "is_amount_true"}
+      %label.label_for_gender{ for: :is_amount_true}
         = t('percentage')
-      = form.radio_button  :is_amount, false, :checked => "checked"
-      %label.label_for_gender{:for => "is_amount_false"}= t('amount')
-      = form.radio_button  :is_amount, true
+      = form.radio_button  :is_amount, false, checked: "checked"
+      %label.label_for_gender{ for: :is_amount_false }
+        = t('amount')
+      = form.radio_button :is_amount, true
   #submit-button
     = form.submit "► #{t('create_text')}"
