--- a/app/views/finance/show_fee_discounts.js.haml
+++ b/app/views/finance/show_fee_discounts.js.haml
@@ -1,1 +1,1 @@
-jQuery("#discount-box").html(#{escape_javascript( render "show_fee_discounts")})
+jQuery("#discount-box").html('#{escape_javascript( render "show_fee_discounts")}')
