--- a/app/views/finance/fee_collection_new.html.haml
+++ b/app/views/finance/fee_collection_new.html.haml
@@ -24,14 +24,13 @@
     = back_button
 #inner-tab-menu
   %ul
-    %li= link_to "#{t('fees_collection')}", :action=>'fee_collection'
+    %li= link_to t('fees_collection'), action: :fee_collection
 #page-yield
   #flash_box
   - unless flash[:notice].nil?
     %p.flash-msg
       = flash[:notice]
-  = form_for @finance_fee_collection,                      |
-    :url => {:action => 'fee_collection_create'} do |form| |
+  = form_for @finance_fee_collection, url: {action: :fee_collection_create} do |form|
     #form-errors= error_messages_for 'finance_fee_collection'
     #left-side-inputs
       .label-field-pair
@@ -39,9 +38,7 @@
           = t('fee_category')
           \:
         .text-input-bg
-          = form.select(:fee_category_id, @fee_categories.map { |item| [item.name, item.name] },                             |
-            {:selected => @fee_category.present? ? @fee_category.first.name : nil , :prompt => "#{ t('select_category')}" }, |
-            {:onchange => "#{remote_function(:url => {:action => "fee_collection_batch_update"}, :with => "'id='+value")}"}) |
+          = form.select(:fee_category_id, @fee_categories.map { |item| [item.name, item.name] }, {selected: @fee_category.present? ? @fee_category.first.name : nil , prompt: t('select_category')}, {onchange: "onChangeRequest(this, '#{url_for(action: :fee_collection_batch_update, id: 'paramid')}')"})
       .label-field-pair
         %label{:for => "reason"}
           = t('fee_collection_name')
@@ -51,17 +48,17 @@
         %label{:for => "reason"}
           = t('start_date')
           \:
-        .text-input-bg= calendar_date_select_tag 'finance_fee_collection[start_date]', I18n.l(@finance_fee_collection.start_date || Date.today,:format=>:default),:popup=>"force"
+        .text-input-bg= date_select 'finance_fee_collection[start_date]', I18n.l(@finance_fee_collection.start_date || Date.today,:format=>:default),:popup=>"force"
       .label-field-pair
         %label{:for => "reason"}
           = t('end_date')
           \:
-        .text-input-bg= calendar_date_select_tag 'finance_fee_collection[end_date]',I18n.l(@finance_fee_collection.end_date || Date.today,:format=>:default), :popup=>"force"
+        .text-input-bg= date_select 'finance_fee_collection[end_date]',I18n.l(@finance_fee_collection.end_date || Date.today,:format=>:default), :popup=>"force"
       .label-field-pair
         %label{:for => "reason"}
           = t('due_date')
           \:
-        .text-input-bg= calendar_date_select_tag 'finance_fee_collection[due_date]', I18n.l(@finance_fee_collection.due_date || Date.today,:format=>:default), :popup=>"force"
+        .text-input-bg= date_select 'finance_fee_collection[due_date]', I18n.l(@finance_fee_collection.due_date || Date.today,:format=>:default), :popup=>"force"
     #batchs
       - unless params[:fee_collection].nil?
         = render :partial=>'fee_collection_batchs' if params[:fee_collection][:category_ids].present?
