--- a/app/views/finance/master_category_edit.js.haml
+++ b/app/views/finance/master_category_edit.js.haml
@@ -1,2 +1,2 @@
-jQuery('#modal-box').html("#{escape_javascript render 'master_category_edit_form'}")
-jQuery('#modal-box').modalBox()
+$('#modal-box').html("#{escape_javascript render 'master_category_edit_form'}")
+$('#modal-box').modalBox()
