--- a/app/views/finance/show_master_categories_list.js.haml
+++ b/app/views/finance/show_master_categories_list.js.haml
@@ -1,1 +1,1 @@
-jQuery('#categories').html("#{escape_javascript render 'master_category_list'}")
+$('#categories').html("#{escape_javascript render 'master_category_list'}")
