Fixes issues of HR-Setting module.

--- a/app/views/employee/_additional_field_option_fields.html.haml
+++ b/app/views/employee/_additional_field_option_fields.html.haml
@@ -1,5 +1,5 @@
 .fields.label-field-pair
-  = c.label ''
+  = c.label :field_option
   .text-input-bg
     = c.text_field :field_option
   = link_to_remove_fields "", c
