--- a/app/views/employee/edit_additional_details.haml
+++ b/app/views/employee/edit_additional_details.haml
@@ -17,7 +17,7 @@
 - #specific language governing permissions and limitations
 - #under the License.
 #content-header
-  = image_tag("  HR/show_hr.png")
+  = image_tag("HR/show_hr.png")
   %h1= t('employee_settings')
   %h3= t('edit_additional_details')
   #app-back-button
@@ -26,7 +26,7 @@
   - unless flash[:notice].nil?
     %p.flash-msg
       = flash[:notice]
-  - form_for :additional_details do |c|
+  - form_for :additional_details, url: {:id => @additional_field.id} do |c|
     = error_messages_for 'additional_details'
     #form-content
       .label-field-pair
