--- a/app/views/employee/edit_category.haml
+++ b/app/views/employee/edit_category.haml
@@ -17,7 +17,7 @@
 - #specific language governing permissions and limitations
 - #under the License.
 #content-header
-  = image_tag("  HR/show_hr.png")
+  = image_tag("HR/show_hr.png")
   %h1= t('employee_settings')
   %h3= t('edit_category')
   #app-back-button
@@ -29,7 +29,7 @@
   - unless flash[:warn_notice].nil?
     #errorExplanation.errorExplanation
       = flash[:warn_notice]
-  - form_for :category do |c|
+  = form_for :category, url: {:id => @category.id} do |c|
     = error_messages_for 'category'
     #form-content
       .label-field-pair
